# miniwr

./: CMakeLists.txt  README.md  TODO.md
src/: main.cpp
src/cli/: ArgParser.cpp  ArgParser.h  MiniWrApp.cpp  MiniWrApp.h
src/core/: ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  Compressor.h  DeflateCompressor.cpp  DeflateCompressor.h
tests/: test_compression.cpp  test_main.cpp
tools/: benchmark.sh
